- add most of the image files we'll be using

--- a/FactoryPlanner/FactoryPlanner.csproj
+++ b/FactoryPlanner/FactoryPlanner.csproj
@@ -64,6 +64,57 @@
     <Content Include="Data\importantStats.txt" />
     <Content Include="Data\recipes.txt" />
     <Content Include="Icon.ico" />
+    <Content Include="Images\Entity\assembling-machine-1\hr-assembling-machine-1-shadow.png" />
+    <Content Include="Images\Entity\assembling-machine-1\hr-assembling-machine-1.png" />
+    <Content Include="Images\Entity\assembling-machine-2\hr-assembling-machine-2-pipe-E.png" />
+    <Content Include="Images\Entity\assembling-machine-2\hr-assembling-machine-2-pipe-N.png" />
+    <Content Include="Images\Entity\assembling-machine-2\hr-assembling-machine-2-pipe-S.png" />
+    <Content Include="Images\Entity\assembling-machine-2\hr-assembling-machine-2-pipe-W.png" />
+    <Content Include="Images\Entity\assembling-machine-2\hr-assembling-machine-2-shadow.png" />
+    <Content Include="Images\Entity\assembling-machine-2\hr-assembling-machine-2.png" />
+    <Content Include="Images\Entity\assembling-machine-3\hr-assembling-machine-3-pipe-E.png" />
+    <Content Include="Images\Entity\assembling-machine-3\hr-assembling-machine-3-pipe-N.png" />
+    <Content Include="Images\Entity\assembling-machine-3\hr-assembling-machine-3-pipe-S.png" />
+    <Content Include="Images\Entity\assembling-machine-3\hr-assembling-machine-3-pipe-W.png" />
+    <Content Include="Images\Entity\assembling-machine-3\hr-assembling-machine-3-shadow.png" />
+    <Content Include="Images\Entity\assembling-machine-3\hr-assembling-machine-3.png" />
+    <Content Include="Images\Entity\express-splitter\hr-express-splitter-east.png" />
+    <Content Include="Images\Entity\express-splitter\hr-express-splitter-north.png" />
+    <Content Include="Images\Entity\express-splitter\hr-express-splitter-south.png" />
+    <Content Include="Images\Entity\express-splitter\hr-express-splitter-west.png" />
+    <Content Include="Images\Entity\express-transport-belt\hr-express-transport-belt.png" />
+    <Content Include="Images\Entity\express-underground-belt\hr-express-underground-belt-structure.png" />
+    <Content Include="Images\Entity\fast-inserter\hr-fast-inserter-hand-base.png" />
+    <Content Include="Images\Entity\fast-inserter\hr-fast-inserter-hand-closed.png" />
+    <Content Include="Images\Entity\fast-inserter\hr-fast-inserter-hand-open.png" />
+    <Content Include="Images\Entity\fast-inserter\hr-fast-inserter-platform.png" />
+    <Content Include="Images\Entity\fast-splitter\hr-fast-splitter-east.png" />
+    <Content Include="Images\Entity\fast-splitter\hr-fast-splitter-north.png" />
+    <Content Include="Images\Entity\fast-splitter\hr-fast-splitter-south.png" />
+    <Content Include="Images\Entity\fast-splitter\hr-fast-splitter-west.png" />
+    <Content Include="Images\Entity\fast-transport-belt\hr-fast-transport-belt.png" />
+    <Content Include="Images\Entity\fast-underground-belt\hr-fast-underground-belt-structure.png" />
+    <Content Include="Images\Entity\inserter\hr-inserter-hand-base.png" />
+    <Content Include="Images\Entity\inserter\hr-inserter-hand-closed.png" />
+    <Content Include="Images\Entity\inserter\hr-inserter-hand-open.png" />
+    <Content Include="Images\Entity\inserter\hr-inserter-platform.png" />
+    <Content Include="Images\Entity\long-handed-inserter\hr-long-handed-inserter-hand-base.png" />
+    <Content Include="Images\Entity\long-handed-inserter\hr-long-handed-inserter-hand-closed.png" />
+    <Content Include="Images\Entity\long-handed-inserter\hr-long-handed-inserter-hand-open.png" />
+    <Content Include="Images\Entity\long-handed-inserter\hr-long-handed-inserter-platform.png" />
+    <Content Include="Images\Entity\splitter\hr-splitter-east.png" />
+    <Content Include="Images\Entity\splitter\hr-splitter-north.png" />
+    <Content Include="Images\Entity\splitter\hr-splitter-south.png" />
+    <Content Include="Images\Entity\splitter\hr-splitter-west.png" />
+    <Content Include="Images\Entity\stack-inserter\hr-stack-inserter-hand-base.png" />
+    <Content Include="Images\Entity\stack-inserter\hr-stack-inserter-hand-closed-shadow.png" />
+    <Content Include="Images\Entity\stack-inserter\hr-stack-inserter-hand-closed.png" />
+    <Content Include="Images\Entity\stack-inserter\hr-stack-inserter-hand-open-shadow.png" />
+    <Content Include="Images\Entity\stack-inserter\hr-stack-inserter-hand-open.png" />
+    <Content Include="Images\Entity\stack-inserter\hr-stack-inserter-platform.png" />
+    <Content Include="Images\Entity\transport-belt\hr-start-end-integration-patches.png" />
+    <Content Include="Images\Entity\transport-belt\hr-transport-belt.png" />
+    <Content Include="Images\Entity\underground-belt\hr-underground-belt-structure.png" />
     <Content Include="Images\Icons\advanced-circuit.png" />
     <Content Include="Images\Icons\coal.png" />
     <Content Include="Images\Icons\copper-cable.png" />
