--- a/FactoryPlanner/FactoryPlanner.csproj
+++ b/FactoryPlanner/FactoryPlanner.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FactorySolver\FactoryState.cs" />
     <Compile Include="FactorySolver\Solver.cs" />
+    <Compile Include="UI\TextureLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -116,6 +117,7 @@
     <Content Include="Images\Entity\transport-belt\hr-transport-belt.png" />
     <Content Include="Images\Entity\underground-belt\hr-underground-belt-structure.png" />
     <Content Include="Images\Icons\advanced-circuit.png" />
+    <Content Include="Images\Icons\blank.png" />
     <Content Include="Images\Icons\coal.png" />
     <Content Include="Images\Icons\copper-cable.png" />
     <Content Include="Images\Icons\copper-plate.png" />
